--- a/SIte-exemplo/index.html
+++ b/SIte-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi nobis quia, nisi minima vitae expedita! Molestias eius ut alias, impedit ratione, facilis harum consequuntur adipisci exercitationem officiis excepturi! Et, sapiente.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A animi exercitationem voluptates esse consequatur voluptate repellat hic officiis tempore sequi dicta tenetur itaque, quidem veniam vel consequuntur. Nulla, minima culpa?</p>
 </body>
 </html>
